[B]Retrospect v4.1.7.46 - Changelog - 2019-01-28[/B]

[B]Framework related[/B]
* Fixed: On video playback error the busy dialog would not close and Kodi would wait for ever for Retrospect to finish (Fixes #1096)
* Fixed: we missed some essential logging on a hard crash

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Fixed: issue with AWS timestamp not being in English (Fixes #1094)