@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="net.rieter.xot.channel.se"
-       version="4.1.7.21"
+       version="4.1.7.22"
        name="Retrospect Swedish Channels"
        provider-name="Bas Rieter">
 
