@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon  id="net.rieter.xot"
-        version="4.1.7.46"
+        version="4.1.7.47"
         name="Retrospect"
         provider-name="Bas Rieter">
 
@@ -114,7 +114,7 @@
         <description lang="en">Retrospect uses the official websites of a lot of different broadcasting companies (mainly Dutch, Belgian, British and Swedish) to make their re-run episodes available on the Kodi platform. More information can be found at www.rieter.net.[CR][CR]Retrospect reports back usage statistics to our servers. This option can be disabled from the add-on settings.</description>
         <disclaimer lang="en">Retrospect is provided as is. We do not take any responsibility for possible (but highly unlikely) damage cause to your system. Nor do we take responsibility for the content that can be watched via this add-on.</disclaimer>
         <language>en nl de se no lt lv fi</language>
-        <news>[B]Retrospect v4.1.7.46 - Changelog - 2019-01-28[/B]
+        <news>[B]Retrospect v4.1.7.47 - Changelog - 2019-01-29[/B]
 
 [B]Framework related[/B]
 * Fixed: On video playback error the busy dialog would not close and Kodi would wait for ever for Retrospect to finish (Fixes #1096)
@@ -124,6 +124,7 @@
 -
 
 [B]Channel related[/B]
+* Fixed: TV4 thumbs not showing (Fixes #1097)
 * Fixed: issue with AWS timestamp not being in English (Fixes #1094)
 
         </news>
