@@ -6,7 +6,7 @@ sonar.projectKey=Retrospect
 # sonar.login=%SONAR_TOKEN%
 
 sonar.projectName=Retrospect
-sonar.projectVersion=4.1.7.46
+sonar.projectVersion=4.1.7.47
 
 sonar.sources=.
 sonar.exclusions=net.rieter.xot/resources/libs/pyscrypt/*,net.rieter.xot/resources/libs/pyaes/*,net.rieter.xot/resources/libs/pyamf/**,net.rieter.xot/resources/libs/pyamf/*,net.rieter.xot/resources/libs/debug/**, **/*.pyc,**/*.pyo,net.rieter.xot/debugrun.py,net.rieter.xot/apiserver.py
