@@ -1,4 +1,4 @@
-[B]Retrospect v4.1.7.46 - Changelog - 2019-01-28[/B]
+[B]Retrospect v4.1.7.47 - Changelog - 2019-01-29[/B]
 
 [B]Framework related[/B]
 * Fixed: On video playback error the busy dialog would not close and Kodi would wait for ever for Retrospect to finish (Fixes #1096)
@@ -8,4 +8,5 @@
 -
 
 [B]Channel related[/B]
+* Fixed: TV4 thumbs not showing (Fixes #1097)
 * Fixed: issue with AWS timestamp not being in English (Fixes #1094)
